workshop03/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: csns
spec:
  ingressClassName: nginx
  rules:
  - host: code-137.184.249.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-service
            port:
              name: web
